# AI-Destiny-Platform

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
client/: README.md
docs/: 00_AI_CONTEXT_INDEX.md  01_项目宪章(Project Charter).md  01_项目简介.md  02_产品定位与愿景.md  03_当前开发状态.md  04_ADR_产品决策记录.md  05_知命_Persona角色设定.md  06_用户体验流程设计.md  07_AI动态分析流程.md  08_系统架构设计.md  09_开发规范.md  10_测试规范.md  11_AI协作日志.md  12_AI协作开发规范.md  13_API接口契约设计.md  14_WebSocket实时通信协议设计.md  15_Phase2架构审计报告.md  16_AI协作治理体系审计报告.md  16b_Phase2_Final_Architecture_Audit.md  17_AI Agent角色与权限规范.md  18_架构风险跟踪表.md  19_分层记忆架构设计.md  20_ProductOwner_Approval.md  21_Architecture_Freeze_Declaration.md  22_Phase3_Development_Plan.md  23_代码目录结构规划.md  HANDOVER.md  sprint30-doc-cleanup-and-code-structure.md
docs/bazi-skill-dist-checks/: 01_paipan_engine_deep_scan.md
docs/code-sprints/: 00_编码Sprint标准模板.md  Phase3_编码Sprint标准模板.md  sprint32-api-key-security.md  sprint33-bazi-engine-migration.md  sprint35-gender-unknown-support.md  sprint36-true-solar-time.md  sprint37-engine-info-field-split.md  sprint38-git-history-verification.md  sprint39-zhiming-scaffold-investigation.md  sprint40-docs22-and-scaffold-relationship.md  sprint41-docs22-content-merge.md  sprint43-selfcheck-anomaly-investigation.md  sprint45-pyproject-dependency-alignment.md  sprint46-selfcheck-failure-root-cause.md  sprint47-tzdata-fix-verification.md  sprint48-fail-fast-timezone.md  sprint49-commit-checkpoint.md
docs/risk-resolutions/: ARC-09-P1-001_风险解决方案.md  ARC-15-P1-001_风险解决方案.md  (+25 more)
tests/: __init__.py  conftest.py
(+50 files in other folders)
